# NIST_Cable_Threading

./: README.md
darknet_ros/darknet_ros/config/: ros_NIST_board.yaml  ros_cable_HRI.yaml  ros_ziptie.yaml  yolov2-tiny-NIST-board.yaml  yolov2-tiny-NIST-cable.yaml  yolov2-tiny-cable-HRI.yaml  yolov2-tiny_wire.yaml  yolov2-tiny_ziptie.yaml  yolov2-voc-NIST-full.yaml  yolov2-voc-NIST.yaml
darknet_ros/darknet_ros/launch/: darknet_ros_NIST.launch  darknet_ros_NIST_board.launch  darknet_ros_NIST_cable.launch  darknet_ros_cable_HRI.launch  darknet_ros_wire.launch  darknet_ros_ziptie.launch
darknet_ros/darknet_ros/yolo_network_config/cfg/: yolov2-tiny-voc_NIST_board.cfg  yolov2-voc-NIST.cfg
nist/launch/: nist.launch
nist/src/: color_detection_blue_kinova_node.cpp  modeling_cable_gen3_nist_node.cpp  modeling_cable_nist_insert.cpp  modeling_cable_nist_insert_final_holder.cpp  modeling_cable_nist_insert_outlier.cpp  nist_run.cpp  nist_start.cpp
nist/srv/: cable_model.srv  cable_plane_color.srv
research/config/: gen3.srdf
research/launch/: gen3_trajopt_node.launch
research/urdf/: gen3.xacro  gen3_trajopt.xacro
trajopt_ros/trajopt_examples/: CMakeLists.txt  package.xml
trajopt_ros/trajopt_examples/config/: pick_and_place_plan.rviz
trajopt_ros/trajopt_examples/src/: gen3_trajopt_moveit.cpp  gen3_trajopt_node.cpp
trajopt_ros/trajopt_examples/srv/: trajopt_node.srv
trajopt_ros/trajopt_ext/vhacd_ros/: CMakeLists.txt
